--- a/templates/suppliers/suppliers.html
+++ b/templates/suppliers/suppliers.html
@@ -1,10 +1,10 @@
-{% extends "employee/employee.html" %}
+{% extends "entrance/novigation.html" %}
 
 {% block content %}
 
 
 
 <div class="content">
-<h1>kjkjhk</h1>
+<h1>поставщики</h1>
 </div>
     {% endblock %}
