--- a/templates/menu/edit.html
+++ b/templates/menu/edit.html
@@ -11,6 +11,21 @@
             <label>Введите name</label><br>
             <input type="text" name="name"  value="{{person.name}}"/>
         </p>
+        <p>
+            <label>Выберити раздел меню</label><br>
+
+            <select name="menu_section">
+                <option >Выберити раздел меню:</option>
+                <option >Закуски</option>
+                <option >Салаты</option>
+                <option >Гарниры</option>
+                <option >Мясо</option>
+                <option >Десерты</option>
+                <option >Напитки</option>
+                <option >Алкоголь</option>
+
+            </select>
+        </p>
          <p>
             <label>Введите weight</label><br>
             <input type="text" name="weight" value="{{person.weight}}"/>
