--- a/templates/employee/employee.html
+++ b/templates/employee/employee.html
@@ -63,7 +63,7 @@
                                             "{% endif %} "+
                                             "{% endfor %} " +
                                         "</table> <form action='addEmployee/' >" +
-                                        "    <button style='width:200px;'> Измененить данные </button>" +
+                                        "    <button style='width:200px;'> Добавление данных </button>" +
                                         "</form>";
                                     document.getElementById("insert").innerHTML = as;
                                 } else if (s.options[i].innerHTML == 'Работники кухни') {
@@ -80,7 +80,7 @@
                                             "{% endif %} "+
                                             "{% endfor %} " +
                                         "</table> <form action='addEmployee/'  >" +
-                                        "    <button style='width:200px;' > Измененить данные </button>" +
+                                        "    <button style='width:200px;' > Добавление данных </button>" +
                                         "</form>";
                                     document.getElementById("insert").innerHTML = as;
 
@@ -97,7 +97,7 @@
                                             "{% endif %} "+
                                             "{% endfor %} " +
                                         "</table> <form action='addEmployee/'>" +
-                                        "    <button style='width:200px;'> Измененить данные </button>" +
+                                        "    <button style='width:200px;'> Добавление данных </button>" +
                                         "</form>";
                                     document.getElementById("insert").innerHTML = as;
 
