--- a/templates/menu/addDB.html
+++ b/templates/menu/addDB.html
@@ -13,15 +13,19 @@
             <label>Выберити раздел меню</label><br>
 {#            <input type="text" name="menu_section"/>#}
             <select name="menu_section">
+{#                {% for sel in sections %}#}
+{#                <option name="sections">{{ sel.name }}</option>#}
+{##}
+{#                {% endfor %}#}
 
-{#                <option >Выберити раздел меню:</option>#}
-{#                <option >Закуски</option>#}
-{#                <option >Салаты</option>#}
-{#                <option >Гарниры</option>#}
-{#                <option >Мясо</option>#}
-{#                <option >Десерты</option>#}
-{#                <option >Напитки</option>#}
-{#                <option >Алкоголь</option>#}
+                <option >Выберити раздел меню:</option>
+                <option >Закуски</option>
+                <option >Салаты</option>
+                <option >Гарниры</option>
+                <option >Мясо</option>
+                <option >Десерты</option>
+                <option >Напитки</option>
+                <option >Алкоголь</option>
 
             </select>
         </p>
